// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> Default story renders snapshot 1`] = `
<h1
  class="heading heading--headline-lg"
>
  Default Heading
</h1>
`;

exports[`<Heading /> Heading1 story renders snapshot 1`] = `
<h1
  class="heading heading--headline-lg"
>
  Heading 1
</h1>
`;

exports[`<Heading /> Heading2 story renders snapshot 1`] = `
<h2
  class="heading heading--headline-md"
>
  Heading 2
</h2>
`;

exports[`<Heading /> Heading3 story renders snapshot 1`] = `
<h3
  class="heading heading--headline-sm"
>
  Heading 3
</h3>
`;

exports[`<Heading /> Heading4 story renders snapshot 1`] = `
<h4
  class="heading heading--title-md"
>
  Heading 4
</h4>
`;

exports[`<Heading /> Heading5 story renders snapshot 1`] = `
<h5
  class="heading heading--title-sm"
>
  Heading 5
</h5>
`;

exports[`<Heading /> Heading6 story renders snapshot 1`] = `
<h6
  class="heading heading--title-xs"
>
  Heading 6
</h6>
`;

exports[`<Heading /> UsingColorTokens story renders snapshot 1`] = `
<div>
  <h1
    class="heading heading--title-md text-utility-warning"
  >
    using 
    <code>
      text-utility-warning
    </code>
     utility class
  </h1>
  <h2
    class="heading heading--title-md text-utility-favorable"
  >
    using 
    <code>
      text-utility-favorable
    </code>
     utility class and preset override
  </h2>
  <h1
    class="heading heading--title-md text-utility-critical"
  >
    using 
    <code>
      text-utility-critical
    </code>
     utility class
  </h1>
  <h1
    class="heading heading--title-md text-[var(--eds-theme-color-text-utility-favorable)]"
  >
    using color with token in utility class and preset override
  </h1>
</div>
`;
